# sc-sim-tools

./: .gitignore  CLAUDE.md  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  requirements.txt  workspace.yaml
.claude/agents/: developer.md  prompt-engineer.md
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: .db  02c69f18-b69e-4caa-b75a-e5fcc0cd219b.db  0f6a6023-abe9-4311-af92-a9b78920f184.db  191ce6d8-d114-44e4-9048-a59e166a5808.db  1fed405b-e561-4d32-ada9-80056b6c991a.db  50312c73-7f3c-410e-8f63-73f85c728a47.db  51b84a1b-b3ef-4ec4-a6dd-6a89f1110b16.db  52ca8223-7cf5-4e41-baf2-ac45e9f73627.db  6566e709-455c-47b6-9188-c8e895cd8545.db  c75833ee-3655-4dd2-b5a8-5d950fb02863.db  index.db
dagster_home/schedules/: schedules.db
data/adm/2026-02-02/: demand_plans.json  inventory_targets.json
data/adm/2026-03-02/: demand_plans.json  inventory_targets.json
data/adm/2026-04-01/: demand_plans.json  inventory_targets.json
data/adm/2026-05-04/: demand_plans.json  inventory_targets.json
data/adm/2026-06-01/: demand_plans.json  (+1 more)
data/master/: carriers.json  catalog.json  customers.json  initial_customer_balances.json  initial_inventory.json  warehouses.json
notebooks/: testing.ipynb
src/: db.py  event_aggregator.py  gold_aggregates.py  gold_dimensions.py  gold_exports.py  gold_fact_financial_tms.py  gold_fact_inventory_production.py  gold_fact_orders.py  load_master.py  stg_adm_forecast.py  stg_erp_batch1.py  stg_erp_batch2.py  stg_erp_batch3.py  stg_orders.py  stg_tms.py
src/sc_sim_pipeline/: __init__.py
(+3201 files in other folders)
